# ROS2-Publisher-Subscriber

entri_ros2_pubsub_cpp/: CMakeLists.txt  package.xml
entri_ros2_pubsub_cpp/msg/: RobotStatus.msg
entri_ros2_pubsub_cpp/src/: publisher_node.cpp  subscriber_node.cpp
